--- a/pom.xml
+++ b/pom.xml
@@ -61,17 +61,22 @@
         <dependency>
             <groupId>zemberek-nlp</groupId>
             <artifactId>core</artifactId>
-            <version>0.11.0</version>
+            <version>0.11.1</version>
         </dependency>
         <dependency>
             <groupId>zemberek-nlp</groupId>
             <artifactId>tokenization</artifactId>
-            <version>0.11.0</version>
+            <version>0.11.1</version>
         </dependency>
         <dependency>
             <groupId>zemberek-nlp</groupId>
             <artifactId>morphology</artifactId>
-            <version>0.11.0</version>
+            <version>0.11.1</version>
+        </dependency>
+        <dependency>
+            <groupId>zemberek-nlp</groupId>
+            <artifactId>normalization</artifactId>
+            <version>0.11.1</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
