--- a/pom.xml
+++ b/pom.xml
@@ -14,16 +14,20 @@
             <name>ahmetaa Maven Repo on Github</name>
             <url>https://raw.github.com/ahmetaa/maven-repo/master</url>
         </repository>
+        <repository>
+            <id>local-repo-clone</id>
+            <url>file:///home/ahmetaa/projects/maven-repo</url>
+        </repository>
     </repositories>
 
-<!--
+
     <distributionManagement>
         <repository>
             <id>local-repo-clone</id>
-            <url>file:///home/kodlab/projects/maven-repo</url>
+            <url>file:///home/ahmetaa/projects/maven-repo</url>
         </repository>
     </distributionManagement>
--->
+
 
     <build>
         <plugins>
@@ -31,8 +35,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                     <encoding>UTF-8</encoding>
                 </configuration>
                 <version>3.0</version>
@@ -60,23 +64,23 @@
     <dependencies>
         <dependency>
             <groupId>zemberek-nlp</groupId>
-            <artifactId>core</artifactId>
-            <version>0.11.1</version>
+            <artifactId>zemberek-core</artifactId>
+            <version>0.12.0</version>
         </dependency>
         <dependency>
             <groupId>zemberek-nlp</groupId>
-            <artifactId>tokenization</artifactId>
-            <version>0.11.1</version>
+            <artifactId>zemberek-tokenization</artifactId>
+            <version>0.12.0</version>
         </dependency>
         <dependency>
             <groupId>zemberek-nlp</groupId>
-            <artifactId>morphology</artifactId>
-            <version>0.11.1</version>
+            <artifactId>zemberek-morphology</artifactId>
+            <version>0.12.0</version>
         </dependency>
         <dependency>
             <groupId>zemberek-nlp</groupId>
-            <artifactId>normalization</artifactId>
-            <version>0.11.1</version>
+            <artifactId>zemberek-normalization</artifactId>
+            <version>0.12.0</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
