--- a/pom.xml
+++ b/pom.xml
@@ -16,13 +16,6 @@
         </repository>
     </repositories>
 
-    <distributionManagement>
-        <repository>
-            <id>local-repo-clone</id>
-            <url>file:///home/ahmetaa/projects/maven-repo</url>
-        </repository>
-    </distributionManagement>
-
     <build>
         <plugins>
             <plugin>
@@ -58,22 +51,27 @@
         <dependency>
             <groupId>zemberek-nlp</groupId>
             <artifactId>zemberek-core</artifactId>
-            <version>0.13.0</version>
+            <version>0.14.0</version>
         </dependency>
         <dependency>
             <groupId>zemberek-nlp</groupId>
             <artifactId>zemberek-tokenization</artifactId>
-            <version>0.13.0</version>
+            <version>0.14.0</version>
         </dependency>
         <dependency>
             <groupId>zemberek-nlp</groupId>
             <artifactId>zemberek-morphology</artifactId>
-            <version>0.13.0</version>
+            <version>0.14.0</version>
         </dependency>
         <dependency>
             <groupId>zemberek-nlp</groupId>
             <artifactId>zemberek-normalization</artifactId>
-            <version>0.13.0</version>
+            <version>0.14.0</version>
+        </dependency>
+        <dependency>
+            <groupId>zemberek-nlp</groupId>
+            <artifactId>zemberek-ner</artifactId>
+            <version>0.14.0</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
